# gpu_mandelbrot_render

./: CMakeLists.txt  README.md  main.cu
lib/: CMakeLists.txt  direct2d.cu  direct2d.h
